// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Rename message plan
          </h1>
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="message-plan"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Message plan name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients.
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your message plans
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your message plans in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common message plan names include the:
                  </p>
                  <ul
                    class="nhsuk-list nhsuk-list--bullet"
                  >
                    <li>
                      channels it uses
                    </li>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the message
                    </li>
                    <li>
                      version number
                    </li>
                  </ul>
                  <p>
                    For example, 'Email, SMS, letter - covid19 2023 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <div
                class="nhsuk-form-group"
              >
                <input
                  class="nhsuk-input"
                  data-testid="name-field"
                  id="name"
                  name="name"
                  type="text"
                  value="Test config"
                />
              </div>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                data-testid="submit-button"
                type="submit"
              >
                Save and continue
              </button>
              <a
                class="nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3 inline-block"
                data-testid="back-link-bottom"
                href="/message-plans/edit-message-plan/d7afdc99-d55b-4f26-8442-2d10aea07346"
              >
                Go back
              </a>
            </div>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="d7afdc99-d55b-4f26-8442-2d10aea07346"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="0"
            />
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`renders errors when form is submitted in invalid state 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#name"
            >
              Enter a message plan name
            </a>
          </li>
        </ul>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Rename message plan
          </h1>
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="message-plan"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Message plan name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients.
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your message plans
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your message plans in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common message plan names include the:
                  </p>
                  <ul
                    class="nhsuk-list nhsuk-list--bullet"
                  >
                    <li>
                      channels it uses
                    </li>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the message
                    </li>
                    <li>
                      version number
                    </li>
                  </ul>
                  <p>
                    For example, 'Email, SMS, letter - covid19 2023 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="name--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Enter a message plan name
                </span>
                <input
                  aria-describedby="name--error-message"
                  class="nhsuk-input nhsuk-input--error"
                  data-testid="name-field"
                  id="name"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                data-testid="submit-button"
                type="submit"
              >
                Save and continue
              </button>
              <a
                class="nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3 inline-block"
                data-testid="back-link-bottom"
                href="/message-plans/edit-message-plan/d7afdc99-d55b-4f26-8442-2d10aea07346"
              >
                Go back
              </a>
            </div>
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="d7afdc99-d55b-4f26-8442-2d10aea07346"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="0"
            />
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
